--- a/subtopic1.html
+++ b/subtopic1.html
@@ -2,57 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title><!-- Subtopic 1 title --></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 2rem; color: #222; }
-    h1 { margin-bottom: 0.5rem; }
-    .meta { color: #555; margin-bottom: 1rem; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #ccc; padding: 0.75rem; vertical-align: top; }
-    th { background: #f7f7f7; text-align: left; width: 20%; }
-    caption { text-align: left; font-weight: bold; margin-bottom: 0.25rem; }
-    .back { margin-top: 1rem; display: inline-block; }
-  </style>
+  <title>AI and Overreliance Risks</title>
 </head>
 <body>
-  <h1><!-- Subtopic 1 title (e.g., "AI and overreliance risks") --></h1>
-  <p class="meta">CSIT 100 • Webography • Dina Ntoufas • <!-- Date --></p>
+  <h1>AI and Overreliance Risks</h1>
+  <p>CSIT 100 • Webography • Dina Ntoufas • 24 November 2025</p>
 
-  <!-- Source A table -->
-  <table aria-label="Source A">
+  <table>
     <caption>Source A</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.com -->" target="_blank" rel="noopener"><!-- https://example.com --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- In your own words: summarize the main points, scope, and relevance to this subtopic. Avoid copy/paste. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://www.educationnext.org/of-ai-and-our-desire-to-believe-the-kids-are-alright/" target="_blank">Education Next</a></td></tr>
+    <tr><th>Site author</th><td>Andrew Kotran</td></tr>
+    <tr><th>Abstract</th><td>This article explores how AI tools may reduce students’ cognitive effort by offering quick solutions. It warns that overreliance on AI can undermine intellectual resilience and discourage deep engagement with challenging material. The author emphasizes the importance of struggle in learning and cautions against using AI as a shortcut that bypasses critical thinking.</td></tr>
   </table>
 
-  <!-- Source B table -->
-  <table aria-label="Source B">
+  <table>
     <caption>Source B</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.org -->" target="_blank" rel="noopener"><!-- https://example.org --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- In your own words: synthesize, compare to Source A, and note credibility/limitations. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://wmich.edu/x/teaching-learning/teaching-resources/ai-critical-thinking" target="_blank">Western Michigan University</a></td></tr>
+    <tr><th>Site author</th><td>Teaching & Learning Office</td></tr>
+    <tr><th>Abstract</th><td>This resource outlines how AI can make learning faster but less reflective. It discusses the cognitive risks of students skipping mental processes when AI provides instant answers. The article highlights the need for educators to guide students in using AI responsibly to preserve critical thinking and problem-solving skills.</td></tr>
   </table>
 
-  <a class="back" href="project.html">Back to project index</a>
+  <a href="project.html">Back to project index</a>
 </body>
 </html>
