--- a/subtopic2.html
+++ b/subtopic2.html
@@ -2,57 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title><!-- Subtopic 2 title --></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 2rem; color: #222; }
-    h1 { margin-bottom: 0.5rem; }
-    .meta { color: #555; margin-bottom: 1rem; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #ccc; padding: 0.75rem; vertical-align: top; }
-    th { background: #f7f7f7; text-align: left; width: 20%; }
-    caption { text-align: left; font-weight: bold; margin-bottom: 0.25rem; }
-    .back { margin-top: 1rem; display: inline-block; }
-  </style>
+  <title>AI as a Scaffold for Critical Thinking</title>
 </head>
 <body>
-  <h1><!-- Subtopic 2 title (e.g., "AI as a scaffold for critical thinking") --></h1>
-  <p class="meta">CSIT 100 • Webography • Dina Ntoufas • <!-- Date --></p>
+  <h1>AI as a Scaffold for Critical Thinking</h1>
+  <p>CSIT 100 • Webography • Dina Ntoufas • 24 November 2025</p>
 
-  <!-- Source A table -->
-  <table aria-label="Source A">
+  <table>
     <caption>Source A</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.com -->" target="_blank" rel="noopener"><!-- https://example.com --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- Focus on mechanisms: adaptive feedback, reasoning prompts, simulations; how they strengthen analysis. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://doi.org/10.1186/s40359-025-1094" target="_blank">BMC Psychology</a></td></tr>
+    <tr><th>Site author</th><td>Zhang, Tian, & Lu</td></tr>
+    <tr><th>Abstract</th><td>This study analyzes how generative AI supports higher-order thinking and problem-solving in pre-service teachers. It shows that AI can enhance critical thinking when used to guide reasoning and reflection. The authors argue that AI tools can scaffold learning by offering personalized feedback and promoting metacognitive awareness.</td></tr>
   </table>
 
-  <!-- Source B table -->
-  <table aria-label="Source B">
+  <table>
     <caption>Source B</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.org -->" target="_blank" rel="noopener"><!-- https://example.org --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- Compare approaches, note evidence quality, and articulate relevance to this subtopic. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://www.educationnext.org/of-ai-and-our-desire-to-believe-the-kids-are-alright/" target="_blank">Education Next</a></td></tr>
+    <tr><th>Site author</th><td>Michael Godsey</td></tr>
+    <tr><th>Abstract</th><td>Godsey emphasizes that AI can support critical thinking when students are taught to use it ethically and reflectively. He advocates for structured assignments that require reasoning and evaluation of AI-generated content. This approach helps students develop independent thinking and analytical skills.</td></tr>
   </table>
 
-  <a class="back" href="project.html">Back to project index</a>
+  <a href="project.html">Back to project index</a>
 </body>
 </html>
