--- a/subtopic3.html
+++ b/subtopic3.html
@@ -2,57 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title><!-- Subtopic 3 title --></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 2rem; color: #222; }
-    h1 { margin-bottom: 0.5rem; }
-    .meta { color: #555; margin-bottom: 1rem; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #ccc; padding: 0.75rem; vertical-align: top; }
-    th { background: #f7f7f7; text-align: left; width: 20%; }
-    caption { text-align: left; font-weight: bold; margin-bottom: 0.25rem; }
-    .back { margin-top: 1rem; display: inline-block; }
-  </style>
+  <title>Misinformation, Bias, and Digital Literacy</title>
 </head>
 <body>
-  <h1><!-- Subtopic 3 title (e.g., "Misinformation, bias, and digital literacy in AI") --></h1>
-  <p class="meta">CSIT 100 • Webography • Dina Ntoufas • <!-- Date --></p>
+  <h1>Misinformation, Bias, and Digital Literacy</h1>
+  <p>CSIT 100 • Webography • Dina Ntoufas • 24 November 2025</p>
 
-  <!-- Source A table -->
-  <table aria-label="Source A">
+  <table>
     <caption>Source A</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.com -->" target="_blank" rel="noopener"><!-- https://example.com --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- Explain risks (hallucinations, bias), evaluation strategies, and why this matters for critical thinking. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://wmich.edu/x/teaching-learning/teaching-resources/ai-critical-thinking" target="_blank">Western Michigan University</a></td></tr>
+    <tr><th>Site author</th><td>Teaching & Learning Office</td></tr>
+    <tr><th>Abstract</th><td>This article warns that students may accept AI-generated content without questioning its accuracy. It highlights the importance of digital literacy and critical evaluation skills to detect bias and misinformation. The resource encourages educators to teach students how to assess the credibility of AI responses.</td></tr>
   </table>
 
-  <!-- Source B table -->
-  <table aria-label="Source B">
+  <table>
     <caption>Source B</caption>
-    <tr>
-      <th scope="row">URL</th>
-      <td><a href="<!-- https://example.org -->" target="_blank" rel="noopener"><!-- https://example.org --></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Site author</th>
-      <td><!-- Author or organization name --></td>
-    </tr>
-    <tr>
-      <th scope="row">Abstract (100–150 words)</th>
-      <td><!-- Provide your synthesis, noting credibility, methodology, and contrast with Source A. --></td>
-    </tr>
+    <tr><th>URL</th><td><a href="https://doi.org/10.1186/s40359-025-1094" target="_blank">BMC Psychology</a></td></tr>
+    <tr><th>Site author</th><td>Zhang, Tian, & Lu</td></tr>
+    <tr><th>Abstract</th><td>The study discusses how AI-generated content may reflect biases from training data. It stresses the need for students to develop judgment skills to evaluate AI output critically. The authors recommend integrating digital literacy into AI-supported learning environments to prevent passive acceptance of flawed information.</td></tr>
   </table>
 
-  <a class="back" href="project.html">Back to project index</a>
+  <a href="project.html">Back to project index</a>
 </body>
 </html>
