--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
   <h2>Project Files</h2>
   <ul>
-    <li><a href="paper.doc">Research Paper</a></li>
-    <li><a href="presentation.ppt">Presentation</a></li>
+    <li><a href="Research%20Paper%20Ntoufas.pdf">Research Paper</a></li>
+    <li><a href="dina.pdf">Presentation</a></li>
+    <li><a href="dina%20webography.pdf">Webography PDF</a></li>
   </ul>
 </body>
 </html>
